name:                hueue
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hueue#readme
license:             BSD3
license-file:        LICENSE
author:              Brett Wines
maintainer:          bgwines@cs.stanford.edu
copyright:           2016 Brett Wines
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src, lib
  exposed-modules:     Utils
                     , GithubWebhook.Types.User
                     , GithubWebhook.Types.Repo
                     , GithubWebhook.Types.Sender
                     , GithubWebhook.Types.Commit
                     , GithubWebhook.Types.Events.PushEvent
                     , GithubWebhook.Types.Events.IssueCommentEvent
                     , QueueStore.Types
                     , QueueStore.Constants
                     , QueueStore.QueueStore
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , aeson
                     , text
                     , bytestring
                     , either
                     , data-default
                     , leveldb-haskell
                     , cereal
  default-language:    Haskell2010

-- executable webhook
--   hs-source-dirs:      GithubWebhook
--   main-is:             GithubWebhook.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , scotty
--                      , transformers
--                      , text
--                      , bytestring
--                      , wai
--                      , aeson
--                      , hueue
--   default-language:    Haskell2010

test-suite hueue-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hueue
                     , tasty-hunit
                     , tasty
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hueue
